# dj-beat-drop

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
scripts/: update_templates.py
src/dj_beat_drop/: __main__.py  main_cli.py  new.py  new_app.py  utils.py
tests/: base_test.py  test_env_settings.py  test_new_app.py  test_new_command.py
