[project]
name = "dj-beat-drop"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inquirerpy>=0.3.4",
    "requests>=2.32.3",
    "setuptools>=75.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[project.scripts]
beatdrop = "dj_beat_drop.main_cli:main"

[project.urls]
Homepage = "https://github.com/epicserve/dj-beat-drop"
Source = "https://github.com/epicserve/dj-beat-drop"
Documentation = "https://github.com/epicserve/dj-beat-drop"