[project]
name = "dj-beat-drop"
version = "0.5.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inquirerpy>=0.3.4",
    "packaging>=24.1",
    "requests>=2.32.3",
    "setuptools>=75.1.0",
    "typer>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff-lsp>=0.0.57",
    "ruff>=0.6.9",
]

[project.scripts]
beatdrop = "dj_beat_drop.main_cli:main"

[project.urls]
Homepage = "https://github.com/epicserve/dj-beat-drop"
Source = "https://github.com/epicserve/dj-beat-drop"
Documentation = "https://github.com/epicserve/dj-beat-drop"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "D",  # pydocstyle
    "S",  # bandit
]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D203", "D212"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", ]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101"]

[tool.coverage.run]
source = ["src/"]
